--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -7,6 +7,23 @@ body {
 
 .home-container {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.message-container {
+    flex-grow: 1;
+    font-size: 16px;
+    font-family: 'Arial', sans-serif;
+}
+
+.button-container {
+    display: flex;
+}
+
+.home-form-container {
+    display: flex;
     justify-content: flex-end;
 }
 
@@ -210,4 +227,12 @@ input[type="text"], input[type="number"], input[type="password"], input[type="em
     align-items: flex-start;
     margin: 0 auto;
     width: 50%;
+}
+
+#error_message {
+    color: red;
+}
+
+#success_message {
+    color: green;
 }
